--- a/ecommerceapp/requirements.txt
+++ b/ecommerceapp/requirements.txt
@@ -1,13 +1,22 @@
 asgiref==3.7.2
 attrs==23.2.0
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==41.0.7
+defusedxml==0.7.1
+dj-rest-auth==5.0.2
 Django==5.0.1
+django-allauth==0.60.1
 django-resized==1.0.2
+django-rest-swagger==2.2.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.0
+drf-yasg==1.21.7
+flake8==7.0.0
 idna==3.6
 inflection==0.5.1
 itypes==1.2.0
@@ -15,14 +24,22 @@ Jinja2==3.1.3
 jsonschema==4.21.0
 jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.3
+mccabe==0.7.0
+oauthlib==3.2.2
 openapi-codec==1.3.2
 packaging==23.2
 pillow==10.2.0
+pycodestyle==2.11.1
+pycparser==2.21
+pyflakes==3.2.0
+PyJWT==2.8.0
 python-decouple==3.8
+python3-openid==3.2.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.32.1
 requests==2.31.0
+requests-oauthlib==1.3.1
 rpds-py==0.17.1
 simplejson==3.19.2
 sqlparse==0.4.4
