--- a/ecommerceapp/requirements.txt
+++ b/ecommerceapp/requirements.txt
@@ -19,6 +19,7 @@ drf-yasg==1.21.7
 flake8==7.0.0
 idna==3.6
 inflection==0.5.1
+iniconfig==2.0.0
 itypes==1.2.0
 Jinja2==3.1.3
 jsonschema==4.21.0
@@ -29,10 +30,13 @@ oauthlib==3.2.2
 openapi-codec==1.3.2
 packaging==23.2
 pillow==10.2.0
+pluggy==1.3.0
 pycodestyle==2.11.1
 pycparser==2.21
 pyflakes==3.2.0
 PyJWT==2.8.0
+pytest==7.4.4
+pytest-django==4.7.0
 python-decouple==3.8
 python3-openid==3.2.0
 pytz==2023.3.post1
