--- a/ecommerceapp/requirements.txt
+++ b/ecommerceapp/requirements.txt
@@ -27,6 +27,7 @@ djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.0
 drf-yasg==1.21.7
 flake8==7.0.0
+gunicorn==21.2.0
 idna==3.6
 inflection==0.5.1
 iniconfig==2.0.0
