--- a/ecommerceapp/requirements.txt
+++ b/ecommerceapp/requirements.txt
@@ -50,6 +50,7 @@ pyflakes==3.2.0
 PyJWT==2.8.0
 pytest==7.4.4
 pytest-django==4.7.0
+pytest-mock==3.12.0
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-decouple==3.8
